[package]
name = "multidimension"
version = "0.1.0"
authors = ["Alistair Turnbull"]
edition = "2021"
rust-version = "1.71.1"
description = "High-level manipulation of multi-dimensional arrays."
repository = "https://github.com/apt1002/multidimension"
license-file = "LICENSE"
keywords = ["multi-dimensional", "arrays"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
